# push_swap

./: .gitignore  CMakeLists.txt  Makefile  Problem_1.c  Problem_2.c  README.md  a.out  a.out.ld_AtxBmM  a.out.ld_iWYbVF  author  checker  checks.c  choose_moves.c  displays_push_swap.c  input.c  instructions.c  main.c  main_copy.c  main_push_swap.c  merge_sort.c  node_actions.c  push_swap  push_swap.h  queue_actions.c  rotate_reverse_moves.c  swap_push_moves.c  test.c  test.sh  test_16.sh  test_5.sh  test_500.sh  tests.txt  utils.c
includes/: push_swap.h
libft/: Makefile  ft_array_size.c  ft_atoi.c  ft_atol.c  ft_bzero.c  ft_free_array.c  ft_isdigit.c  ft_isemptyline.c  ft_isnumber.c  ft_ispositive_number.c  ft_iswhitespace.c  ft_max.c  ft_min.c  ft_numlen.c  ft_print_array.c  ft_put_error.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strcmp_trim.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  ft_strtrim.c  ft_substr.c  get_next_line.c  libft.h
old_version/: cualquiera.c  test.c  version_22Mar_1.c  version_28.c  version_69.c
src/checker/: check_sort.c  checker.c  sort_checker.c
src/common/: displays_push_swap.c  error.c  input.c  instructions.c  merge_sort.c  node_actions.c  queue_actions.c  rotate_reverse_moves.c  swap_push_moves.c  utils.c  utils_common.c  (+1 more)
test/: 100.sh  1000.sh  16.sh  16_checker.sh  3.sh  3_checker.sh  500.sh  500_checker.sh  5_checker.sh  test.sh  test_03_con_checker.sh  test_100.sh  test_1000.sh  test_1100.sh  test_16.sh  test_5.sh  test_500.sh  test_5000.sh  test_500_con_checker.sh  test_5_con_checker.sh  test_5_sin_exe.sh  tests.txt
(+18 files in other folders)
